start working on port (kill me now)