@@ -8,14 +8,10 @@ import net.irisshaders.iris.gui.NavigationController;
 import net.irisshaders.iris.gui.OldImageButton;
 import net.irisshaders.iris.gui.element.ShaderPackOptionList;
 import net.irisshaders.iris.gui.element.ShaderPackSelectionList;
-import net.irisshaders.iris.gui.element.screen.IrisButton;
 import net.irisshaders.iris.gui.element.widget.AbstractElementWidget;
 import net.irisshaders.iris.gui.element.widget.CommentedElementWidget;
-import net.irisshaders.iris.mixin.GameRendererAccessor;
 import net.irisshaders.iris.platform.IrisPlatformHelpers;
 import net.irisshaders.iris.shaderpack.ShaderPack;
-import net.irisshaders.iris.uniforms.FrameUpdateNotifier;
-import net.irisshaders.iris.uniforms.transforms.SmoothedFloat;
 import net.minecraft.ChatFormatting;
 import net.minecraft.Util;
 import net.minecraft.client.Minecraft;
@@ -24,8 +20,7 @@ import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.components.Tooltip;
 import net.minecraft.client.gui.screens.ConfirmLinkScreen;
 import net.minecraft.client.gui.screens.ConfirmScreen;
-import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.renderer.PostChain;
+import net.minecraft.client.gui.screen.Screen;
 import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
@@ -38,7 +33,6 @@ import java.io.InputStream;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashSet;
@@ -47,6 +41,7 @@ import java.util.Optional;
 import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 public class ShaderPackScreen extends Screen implements HudHideable {
 	/**
@@ -60,7 +55,6 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 	private static final String development = "Development Environment";
 	private final Screen parent;
 	private final MutableComponent irisTextComponent;
-	private final FrameUpdateNotifier notifier = new FrameUpdateNotifier();
 	private ShaderPackSelectionList shaderPackList;
 	private @Nullable ShaderPackOptionList shaderOptionList = null;
 	private @Nullable NavigationController navigation = null;
@@ -75,35 +69,10 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 	private boolean dropChanges = false;
 	private MutableComponent developmentComponent;
 	private MutableComponent updateComponent;
+
 	private boolean guiHidden = false;
-	public final SmoothedFloat blurTransition = new SmoothedFloat(2, 2, () -> {
-		if (guiHidden) {
-			return 0.0f;
-		} else if (this.optionMenuOpen) {
-			return 0.1f;
-		} else {
-			return (float) this.minecraft.options.getMenuBackgroundBlurriness();
-		}
-	}, notifier);
 	private float guiButtonHoverTimer = 0.0f;
 	private Button openFolderButton;
-	private float backgroundInit = 0.0f;
-	public final SmoothedFloat listTransition = new SmoothedFloat(1, 1, () -> {
-		if (guiHidden || this.optionMenuOpen) {
-			return 0.0f;
-		} else {
-			return backgroundInit;
-		}
-	}, notifier);
-
-	public final SmoothedFloat buttonTransition = new SmoothedFloat(1, 1, () -> {
-		if (guiHidden) {
-			return 0.0f;
-		} else {
-			return backgroundInit;
-		}
-	}, notifier);
-	private OldImageButton showHideButton;
 
 	public ShaderPackScreen(Screen parent) {
 		super(Component.translatable("options.iris.shaderPackSelection.title"));
@@ -128,8 +97,11 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 
 	@Override
 	public void render(GuiGraphics guiGraphics, int mouseX, int mouseY, float delta) {
-		notifier.onNewFrame();
-		backgroundInit = 1.0f;
+		if (this.minecraft.level == null) {
+			this.renderBackground(guiGraphics);
+		} else if (!this.guiHidden) {
+			guiGraphics.fillGradient(0, 0, width, height, 0x4F232323, 0x4F232323);
+		}
 
 		if (Screen.hasControlDown() && InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(), GLFW.GLFW_KEY_D)) {
 			Minecraft.getInstance().setScreen(new ConfirmScreen((option) -> {
@@ -142,19 +114,15 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 		}
 
 		if (!this.guiHidden) {
-			super.render(guiGraphics, mouseX, mouseY, delta);
-
 			if (optionMenuOpen && this.shaderOptionList != null) {
 				this.shaderOptionList.render(guiGraphics, mouseX, mouseY, delta);
 			} else {
 				this.shaderPackList.render(guiGraphics, mouseX, mouseY, delta);
 			}
-		} else {
-			this.renderBlurredBackground(delta);
-			this.showHideButton.render(guiGraphics, mouseX, mouseY, delta);
 		}
 
 		float previousHoverTimer = this.guiButtonHoverTimer;
+		super.render(guiGraphics, mouseX, mouseY, delta);
 		if (previousHoverTimer == this.guiButtonHoverTimer) {
 			this.guiButtonHoverTimer = 0.0f;
 		}
@@ -229,18 +197,25 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 		this.removeWidget(this.shaderPackList);
 		this.removeWidget(this.shaderOptionList);
 
-		this.shaderPackList = new ShaderPackSelectionList(this, this.minecraft, this.width, this.height, 32, this.height - 58 - 32, 0, this.width);
+		this.shaderPackList = new ShaderPackSelectionList(this, this.minecraft, this.width, this.height, 32, this.height - 58, 0, this.width);
 
 		if (Iris.getCurrentPack().isPresent() && this.navigation != null) {
 			ShaderPack currentPack = Iris.getCurrentPack().get();
 
-			this.shaderOptionList = new ShaderPackOptionList(this, this.navigation, currentPack, this.minecraft, this.width, this.height, 32, this.height - 58 - 32, 0, this.width);
+			this.shaderOptionList = new ShaderPackOptionList(this, this.navigation, currentPack, this.minecraft, this.width, this.height, 32, this.height - 58, 0, this.width);
 			this.navigation.setActiveOptionList(this.shaderOptionList);
 
 			this.shaderOptionList.rebuild();
 		} else {
 			optionMenuOpen = false;
 			this.shaderOptionList = null;
+		}
+
+		if (inWorld) {
+			this.shaderPackList.setRenderBackground(false);
+			if (shaderOptionList != null) {
+				this.shaderOptionList.setRenderBackground(false);
+			}
 		}
 
 		this.clearWidgets();
@@ -252,20 +227,20 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 				this.addRenderableWidget(shaderPackList);
 			}
 
-			this.addRenderableWidget(IrisButton.iris$builder(CommonComponents.GUI_DONE, button -> onClose(), buttonTransition).bounds(bottomCenter + 104, this.height - 27, 100, 20
+			this.addRenderableWidget(Button.builder(CommonComponents.GUI_DONE, button -> onClose()).bounds(bottomCenter + 104, this.height - 27, 100, 20
 			).build());
 
-			this.addRenderableWidget(IrisButton.iris$builder(Component.translatable("options.iris.apply"), button -> this.applyChanges(), buttonTransition).bounds(bottomCenter, this.height - 27, 100, 20
+			this.addRenderableWidget(Button.builder(Component.translatable("options.iris.apply"), button -> this.applyChanges()).bounds(bottomCenter, this.height - 27, 100, 20
 			).build());
 
-			this.addRenderableWidget(IrisButton.iris$builder(CommonComponents.GUI_CANCEL, button -> this.dropChangesAndClose(), buttonTransition).bounds(bottomCenter - 104, this.height - 27, 100, 20
+			this.addRenderableWidget(Button.builder(CommonComponents.GUI_CANCEL, button -> this.dropChangesAndClose()).bounds(bottomCenter - 104, this.height - 27, 100, 20
 			).build());
 
-			this.openFolderButton = IrisButton.iris$builder(Component.translatable("options.iris.openShaderPackFolder"), button -> openShaderPackFolder(), buttonTransition).bounds(topCenter - 78, this.height - 51, 152, 20
+			this.openFolderButton = Button.builder(Component.translatable("options.iris.openShaderPackFolder"), button -> openShaderPackFolder()).bounds(topCenter - 78, this.height - 51, 152, 20
 			).build();
 			this.addRenderableWidget(openFolderButton);
 
-			this.screenSwitchButton = this.addRenderableWidget(IrisButton.iris$builder(Component.translatable("options.iris.shaderPackList"), button -> {
+			this.screenSwitchButton = this.addRenderableWidget(Button.builder(Component.translatable("options.iris.shaderPackList"), button -> {
 					this.optionMenuOpen = !this.optionMenuOpen;
 
 					// UX: Apply changes before switching screens to avoid unintuitive behavior
@@ -277,7 +252,7 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 					setFocused(shaderPackList.getFocused());
 					this.init();
 				}
-				, buttonTransition).bounds(topCenter + 78, this.height - 51, 152, 20
+			).bounds(topCenter + 78, this.height - 51, 152, 20
 			).build());
 
 			refreshScreenSwitchButton();
@@ -299,7 +274,7 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 				x = (int) (endOfLastButton + (freeSpace / 2.0f)) - 10;
 			}
 
-			this.showHideButton = new OldImageButton(
+			OldImageButton showHideButton = new OldImageButton(
 				x, this.height - 39,
 				20, 20,
 				this.guiHidden ? 20 : 0, 146, 20,
@@ -313,7 +288,7 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 			);
 
 			showHideButton.setTooltip(Tooltip.create(showOrHide));
-			showHideButton.setTooltipDelay(Duration.ofSeconds(10));
+			showHideButton.setTooltipDelay(10);
 
 			this.addRenderableWidget(showHideButton);
 		}
@@ -350,21 +325,6 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 			);
 			this.screenSwitchButton.active = optionMenuOpen || shaderPackList.getTopButtonRow().shadersEnabled;
 		}
-	}
-
-	private void processFixedBlur(float tick) {
-		PostChain blurEffect = ((GameRendererAccessor) this.minecraft.gameRenderer).getBlurEffect();
-		float g = Math.min(this.minecraft.options.getMenuBackgroundBlurriness(), this.blurTransition.getAsFloat());
-		if (blurEffect != null && g >= 1.0F) {
-			blurEffect.setUniform("Radius", g);
-			blurEffect.process(tick);
-		}
-	}
-
-	@Override
-	protected void renderBlurredBackground(float pScreen0) {
-		processFixedBlur(pScreen0);
-		this.minecraft.getMainRenderTarget().bindWrite(false);
 	}
 
 	@Override
@@ -417,9 +377,6 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 			this.init();
 
 			this.setFocused(null);
-		} else if (key == GLFW.GLFW_KEY_F1 && this.showHideButton != null) {
-			this.guiHidden = !guiHidden;
-			this.init();
 		}
 
 		return this.guiHidden || super.keyPressed(key, j, k);
@@ -476,7 +433,7 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 
 			if (paths.size() == 1) {
 				// If a single pack could not be added, provide a message with that pack in the file name
-				String fileName = paths.getFirst().getFileName().toString();
+				String fileName = paths.get(0).getFileName().toString();
 
 				this.notificationDialog = Component.translatable(
 					"options.iris.shaderPackSelection.failedAddSingle",
@@ -492,7 +449,7 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 
 		} else if (packs.size() == 1) {
 			// In most cases, users will drag a single pack into the selection menu. So, let's special case it.
-			String packName = packs.getFirst().getFileName().toString();
+			String packName = packs.get(0).getFileName().toString();
 
 			this.notificationDialog = Component.translatable(
 				"options.iris.shaderPackSelection.addedPack",
@@ -532,7 +489,7 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 			return;
 		}
 
-		this.importPackOptions(paths.getFirst());
+		this.importPackOptions(paths.get(0));
 	}
 
 	public void importPackOptions(Path settingFile) {
@@ -625,7 +582,9 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 	}
 
 	private void openShaderPackFolder() {
-		CompletableFuture.runAsync(() -> Util.getPlatform().openUri(Iris.getShaderpacksDirectoryManager().getDirectoryUri()));
+		CompletableFuture.runAsync(() -> {
+			Util.getPlatform().openUri(Iris.getShaderpacksDirectoryManager().getDirectoryUri());
+		});
 	}
 
 	// Let the screen know if an element is hovered or not, allowing for accurately updating which element is hovered
@@ -637,7 +596,7 @@ public class ShaderPackScreen extends Screen implements HudHideable {
 				this.hoveredElementCommentTitle = ((CommentedElementWidget<?>) widget).getCommentTitle();
 
 				Optional<Component> commentBody = ((CommentedElementWidget<?>) widget).getCommentBody();
-				if (commentBody.isEmpty()) {
+				if (!commentBody.isPresent()) {
 					this.hoveredElementCommentBody.clear();
 				} else {
 					String rawCommentBody = commentBody.get().getString();
