@@ -11,6 +11,8 @@ import io.github.douira.glsl_transformer.ast.node.expression.binary.ArrayAccessE
 import io.github.douira.glsl_transformer.ast.node.expression.unary.FunctionCallExpression;
 import io.github.douira.glsl_transformer.ast.node.external_declaration.DeclarationExternalDeclaration;
 import io.github.douira.glsl_transformer.ast.node.external_declaration.ExternalDeclaration;
+import io.github.douira.glsl_transformer.ast.node.type.qualifier.LayoutQualifier;
+import io.github.douira.glsl_transformer.ast.node.type.qualifier.NamedLayoutQualifierPart;
 import io.github.douira.glsl_transformer.ast.node.type.qualifier.StorageQualifier;
 import io.github.douira.glsl_transformer.ast.node.type.qualifier.StorageQualifier.StorageType;
 import io.github.douira.glsl_transformer.ast.node.type.specifier.BuiltinFixedTypeSpecifier;
@@ -25,6 +27,7 @@ import io.github.douira.glsl_transformer.ast.transform.ASTParser;
 import io.github.douira.glsl_transformer.ast.transform.Template;
 import io.github.douira.glsl_transformer.parser.ParseShape;
 import io.github.douira.glsl_transformer.util.Type;
+import net.irisshaders.iris.Iris;
 import net.irisshaders.iris.gl.blending.AlphaTest;
 import net.irisshaders.iris.gl.shader.ShaderType;
 import net.irisshaders.iris.pipeline.transform.parameter.Parameters;
@@ -289,8 +292,6 @@ public class CommonTransformer {
 		renameFunctionCall(root, "texture3D", "texture");
 		renameFunctionCall(root, "texture2DLod", "textureLod");
 		renameFunctionCall(root, "texture3DLod", "textureLod");
-		renameFunctionCall(root, "texture2DProj", "textureProj");
-		renameFunctionCall(root, "texture3DProj", "textureProj");
 		renameFunctionCall(root, "texture2DGrad", "textureGrad");
 		renameFunctionCall(root, "texture2DGradARB", "textureGrad");
 		renameFunctionCall(root, "texture3DGrad", "textureGrad");
@@ -337,7 +338,7 @@ public class CommonTransformer {
 				samplerDeclarationMember = id.getAncestor(DeclarationMember.class);
 
 				// remove since we are treating the declaration specially
-				gtextureTargets.removeLast();
+				gtextureTargets.remove(gtextureTargets.size() - 1);
 				continue;
 			}
 			// we found a declaration using this name, but it's not a sampler,
